# CMake-InterProject-Dependencies

./: CMakeLists.txt  Common.cmake  ProjConfig.cmake.in  README.md
ProjA/: CMakeLists.txt
ProjB/: CMakeLists.txt
ProjC/: CMakeLists.txt
